# ufa

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  COPYING  Makedefs  Makefile  README.md  convert_dir.sh  ufaset
.github/workflows/: cmake-single-platform.yml
config/: ufad.service.in
contrib/: README  convert_dir.sh
contrib/nautilus/: README  ufa_nautilus.py
doc/: ufa.excalidraw
extensions/nautilus/: README  ufa.py  ufa_nautilus.py
include/: list.h  logging.h  misc.h  repo.h
src/core/: CMakeLists.txt  config.c  config.h  data.c  data.h  errors.h  module.mk  monitor.h  monitor_inotify.c  repo.h  repo_sqlite.c  ufad.c  ufafs.c
src/json/: CMakeLists.txt  jsonrpc_api.c  jsonrpc_api.h  jsonrpc_parser.c  jsonrpc_parser.h  jsonrpc_server.c  jsonrpc_server.h
src/tools/: CMakeLists.txt  cli.c  cli.h  module.mk  ufaattr.c  ufactl.c  ufafind.c  ufaset.c  ufatag.c
src/util/: CMakeLists.txt  daemonize.c  daemonize.h  error.c  error.h  hashtable.c  hashtable.h  list.c  list.h  logging.c  logging.h  misc.c  misc.h  module.mk  string.c  string.h
tests/: CMakeLists.txt  check_config.c  check_hashtable.c  check_jsonrpc_api.c  check_list.c  check_misc.c  check_parser.c  check_repo_sqlite.c  check_string.c
