# ========================================================================== #
# Copyright (c) 2023 Henrique Teófilo                                        #
# All rights reserved.                                                       #
#                                                                            #
# This file is part of UFA project.                                          #
# For the terms of usage and distribution, please see COPYING file.          #
# ========================================================================== #

add_library(ufa-util
        error.c
        list.c
        logging.c
        misc.c
        hashtable.c
        )
